--- a/GitWatch/RepositoryCell.xib
+++ b/GitWatch/RepositoryCell.xib
@@ -8,22 +8,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="52" id="J1p-Uv-Hk3" customClass="RepositoryCell">
-            <rect key="frame" x="0.0" y="0.0" width="404" height="52"/>
+            <rect key="frame" x="0.0" y="0.0" width="404" height="55"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J1p-Uv-Hk3" id="nMp-EM-EIu">
-                <rect key="frame" x="0.0" y="0.0" width="404" height="51"/>
+                <rect key="frame" x="0.0" y="0.0" width="404" height="54"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="repoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="hmr-LJ-OAo">
                         <rect key="frame" x="8" y="11" width="16" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="0j7-op-CGn"/>
+                            <constraint firstAttribute="width" constant="16" id="Ue8-OO-O4S"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xP-Aa-gwq">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xP-Aa-gwq">
                         <rect key="frame" x="32" y="8" width="322" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="334" id="9ni-gA-Cwv"/>
                             <constraint firstAttribute="width" constant="312" id="JPS-Wy-yYf"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <variation key="default">
@@ -32,12 +36,6 @@
                                 <exclude reference="JPS-Wy-yYf"/>
                             </mask>
                         </variation>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A GitHub client to watch the repos you care about" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-eU-XoZ">
-                        <rect key="frame" x="32" y="30" width="322" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cd2-xU-m2w">
                         <rect key="frame" x="374" y="15" width="22" height="22"/>
@@ -50,22 +48,28 @@
                             <action selector="checkboxClick:" destination="J1p-Uv-Hk3" eventType="touchUpInside" id="Inf-Wb-eV9"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="A GitHub client to watch the repos you care about client to watch the repos you care about" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-eU-XoZ">
+                        <rect key="frame" x="32" y="29" width="332" height="25"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="hmr-LJ-OAo" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="3" id="0Xf-X6-OdQ"/>
-                    <constraint firstItem="cd2-xU-m2w" firstAttribute="centerY" secondItem="nMp-EM-EIu" secondAttribute="centerY" id="0lC-mw-QLB"/>
-                    <constraint firstItem="3VF-eU-XoZ" firstAttribute="top" secondItem="5xP-Aa-gwq" secondAttribute="bottom" constant="1" id="AAa-Vi-IOI"/>
+                    <constraint firstItem="cd2-xU-m2w" firstAttribute="centerY" secondItem="nMp-EM-EIu" secondAttribute="centerY" constant="-1" id="0lC-mw-QLB"/>
+                    <constraint firstItem="3VF-eU-XoZ" firstAttribute="top" secondItem="5xP-Aa-gwq" secondAttribute="bottom" id="AAa-Vi-IOI"/>
                     <constraint firstAttribute="bottomMargin" secondItem="hmr-LJ-OAo" secondAttribute="bottom" constant="40" id="Ijr-3b-M8m"/>
                     <constraint firstItem="hmr-LJ-OAo" firstAttribute="centerY" secondItem="5xP-Aa-gwq" secondAttribute="centerY" id="MqR-tu-v2e"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="19" id="RG9-pr-NXX"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="leading" secondItem="5xP-Aa-gwq" secondAttribute="trailing" constant="20" id="RJz-sB-Y3F"/>
                     <constraint firstAttribute="bottomMargin" secondItem="hmr-LJ-OAo" secondAttribute="bottom" constant="16" id="RPH-ug-S76"/>
                     <constraint firstItem="hmr-LJ-OAo" firstAttribute="leading" secondItem="nMp-EM-EIu" secondAttribute="leadingMargin" id="RwY-nG-UKc"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="3VF-eU-XoZ" secondAttribute="bottom" constant="-8" id="SYp-XO-sMX"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="3VF-eU-XoZ" secondAttribute="bottom" id="SYp-XO-sMX"/>
                     <constraint firstItem="3VF-eU-XoZ" firstAttribute="leading" secondItem="nMp-EM-EIu" secondAttribute="leadingMargin" constant="24" id="Y7R-C8-4YR"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="19" id="ZM4-MQ-jh7"/>
                     <constraint firstItem="5xP-Aa-gwq" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" id="dBN-7V-w7Z"/>
-                    <constraint firstItem="cd2-xU-m2w" firstAttribute="leading" secondItem="3VF-eU-XoZ" secondAttribute="trailing" constant="20" id="fUI-Dq-DJ5"/>
+                    <constraint firstItem="cd2-xU-m2w" firstAttribute="leading" secondItem="3VF-eU-XoZ" secondAttribute="trailing" constant="10" id="fUI-Dq-DJ5"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="leading" secondItem="3VF-eU-XoZ" secondAttribute="trailing" constant="69" id="gAp-kQ-ZdV"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="trailing" secondItem="nMp-EM-EIu" secondAttribute="trailingMargin" id="hyx-gX-ps4"/>
                     <constraint firstAttribute="trailingMargin" secondItem="5xP-Aa-gwq" secondAttribute="trailing" constant="91" id="kpQ-CA-3pA"/>
@@ -77,7 +81,11 @@
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="Ijr-3b-M8m"/>
+                        <exclude reference="MqR-tu-v2e"/>
+                        <exclude reference="RPH-ug-S76"/>
                         <exclude reference="kpQ-CA-3pA"/>
+                        <exclude reference="SYp-XO-sMX"/>
+                        <exclude reference="Y7R-C8-4YR"/>
                         <exclude reference="RG9-pr-NXX"/>
                         <exclude reference="ZM4-MQ-jh7"/>
                         <exclude reference="gAp-kQ-ZdV"/>
@@ -94,7 +102,7 @@
                 <outlet property="repositoryImage" destination="hmr-LJ-OAo" id="NCn-vA-eug"/>
                 <outlet property="repositoryName" destination="5xP-Aa-gwq" id="FwS-BA-JbX"/>
             </connections>
-            <point key="canvasLocation" x="177" y="338"/>
+            <point key="canvasLocation" x="177" y="337.5"/>
         </tableViewCell>
     </objects>
     <resources>
