--- a/GitWatch/RepositoryCell.xib
+++ b/GitWatch/RepositoryCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="52" id="J1p-Uv-Hk3" customClass="RepositoryCell">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RepositoryCell " selectionStyle="none" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="52" id="J1p-Uv-Hk3" customClass="RepositoryCell">
             <rect key="frame" x="0.0" y="0.0" width="404" height="55"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J1p-Uv-Hk3" id="nMp-EM-EIu">
@@ -94,7 +94,7 @@
                     </mask>
                 </variation>
             </tableViewCellContentView>
-            <accessibility key="accessibilityConfiguration" identifier="SimpleTableCell"/>
+            <accessibility key="accessibilityConfiguration" identifier="RepositoryCell "/>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="checkbox" destination="cd2-xU-m2w" id="tRe-iq-LSO"/>
