--- a/GitWatch/RepositoryCell.xib
+++ b/GitWatch/RepositoryCell.xib
@@ -7,11 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RepositoryCell " selectionStyle="none" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="52" id="J1p-Uv-Hk3" customClass="RepositoryCell">
-            <rect key="frame" x="0.0" y="0.0" width="404" height="55"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RepositoryCell " selectionStyle="none" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="59" id="J1p-Uv-Hk3" customClass="RepositoryCell">
+            <rect key="frame" x="0.0" y="0.0" width="404" height="62"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J1p-Uv-Hk3" id="nMp-EM-EIu">
-                <rect key="frame" x="0.0" y="0.0" width="404" height="54"/>
+                <rect key="frame" x="0.0" y="0.0" width="404" height="61"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="repoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="hmr-LJ-OAo">
@@ -21,11 +21,12 @@
                             <constraint firstAttribute="width" constant="16" id="Ue8-OO-O4S"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xP-Aa-gwq">
-                        <rect key="frame" x="32" y="8" width="322" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xP-Aa-gwq">
+                        <rect key="frame" x="32" y="8" width="322" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="334" id="9ni-gA-Cwv"/>
                             <constraint firstAttribute="width" constant="312" id="JPS-Wy-yYf"/>
+                            <constraint firstAttribute="height" constant="18" id="hr9-MY-uY4"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -37,8 +38,8 @@
                             </mask>
                         </variation>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cd2-xU-m2w">
-                        <rect key="frame" x="374" y="15" width="22" height="22"/>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cd2-xU-m2w">
+                        <rect key="frame" x="374" y="25" width="22" height="22"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="8Gu-Um-QtG"/>
                             <constraint firstAttribute="width" constant="22" id="OgP-um-eyX"/>
@@ -48,8 +49,11 @@
                             <action selector="checkboxClick:" destination="J1p-Uv-Hk3" eventType="touchUpInside" id="Inf-Wb-eV9"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="A GitHub client to watch the repos you care about client to watch the repos you care about" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-eU-XoZ">
-                        <rect key="frame" x="32" y="29" width="332" height="25"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A GitHub client to watch the repos you care about client to watch the repos you care about" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-eU-XoZ">
+                        <rect key="frame" x="32" y="31" width="332" height="27"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="27" id="qrh-Qr-Gdt"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -57,8 +61,8 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="hmr-LJ-OAo" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="3" id="0Xf-X6-OdQ"/>
-                    <constraint firstItem="cd2-xU-m2w" firstAttribute="centerY" secondItem="nMp-EM-EIu" secondAttribute="centerY" constant="-1" id="0lC-mw-QLB"/>
-                    <constraint firstItem="3VF-eU-XoZ" firstAttribute="top" secondItem="5xP-Aa-gwq" secondAttribute="bottom" id="AAa-Vi-IOI"/>
+                    <constraint firstItem="cd2-xU-m2w" firstAttribute="centerY" secondItem="nMp-EM-EIu" secondAttribute="centerY" constant="3.5" id="0lC-mw-QLB"/>
+                    <constraint firstItem="3VF-eU-XoZ" firstAttribute="top" secondItem="5xP-Aa-gwq" secondAttribute="bottom" constant="5" id="AAa-Vi-IOI"/>
                     <constraint firstAttribute="bottomMargin" secondItem="hmr-LJ-OAo" secondAttribute="bottom" constant="40" id="Ijr-3b-M8m"/>
                     <constraint firstItem="hmr-LJ-OAo" firstAttribute="centerY" secondItem="5xP-Aa-gwq" secondAttribute="centerY" id="MqR-tu-v2e"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="19" id="RG9-pr-NXX"/>
@@ -74,6 +78,7 @@
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="trailing" secondItem="nMp-EM-EIu" secondAttribute="trailingMargin" id="hyx-gX-ps4"/>
                     <constraint firstAttribute="trailingMargin" secondItem="5xP-Aa-gwq" secondAttribute="trailing" constant="91" id="kpQ-CA-3pA"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="leading" secondItem="3VF-eU-XoZ" secondAttribute="trailing" constant="69" id="pFL-bP-c2a"/>
+                    <constraint firstAttribute="bottom" secondItem="3VF-eU-XoZ" secondAttribute="bottom" constant="3" id="utx-WC-qGl"/>
                     <constraint firstItem="cd2-xU-m2w" firstAttribute="top" secondItem="nMp-EM-EIu" secondAttribute="topMargin" constant="7" id="x8m-rm-UG6"/>
                     <constraint firstItem="5xP-Aa-gwq" firstAttribute="leading" secondItem="3VF-eU-XoZ" secondAttribute="leading" id="x90-Xt-T5h"/>
                     <constraint firstItem="5xP-Aa-gwq" firstAttribute="leading" secondItem="hmr-LJ-OAo" secondAttribute="trailing" constant="8" symbolic="YES" id="xvT-OW-wsh"/>
@@ -102,7 +107,7 @@
                 <outlet property="repositoryImage" destination="hmr-LJ-OAo" id="NCn-vA-eug"/>
                 <outlet property="repositoryName" destination="5xP-Aa-gwq" id="FwS-BA-JbX"/>
             </connections>
-            <point key="canvasLocation" x="177" y="337.5"/>
+            <point key="canvasLocation" x="177" y="341"/>
         </tableViewCell>
     </objects>
     <resources>
