--- a/GitWatch/RepositoryCell.xib
+++ b/GitWatch/RepositoryCell.xib
@@ -8,10 +8,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RepositoryCell " selectionStyle="none" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="59" id="J1p-Uv-Hk3" customClass="RepositoryCell">
-            <rect key="frame" x="0.0" y="0.0" width="404" height="62"/>
+            <rect key="frame" x="0.0" y="0.0" width="404" height="64"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J1p-Uv-Hk3" id="nMp-EM-EIu">
-                <rect key="frame" x="0.0" y="0.0" width="404" height="61"/>
+                <rect key="frame" x="0.0" y="0.0" width="404" height="63"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="repoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="hmr-LJ-OAo">
@@ -28,9 +28,9 @@
                             <constraint firstAttribute="width" constant="312" id="JPS-Wy-yYf"/>
                             <constraint firstAttribute="height" constant="18" id="hr9-MY-uY4"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
+                        <color key="highlightedColor" red="0.23137254901960785" green="0.23137254901960785" blue="0.23137254901960785" alpha="1" colorSpace="calibratedRGB"/>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="9ni-gA-Cwv"/>
@@ -49,14 +49,14 @@
                             <action selector="checkboxClick:" destination="J1p-Uv-Hk3" eventType="touchUpInside" id="Inf-Wb-eV9"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A GitHub client to watch the repos you care about client to watch the repos you care about" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-eU-XoZ">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A GitHub client to watch the repos you care about client to watch the repos you care about" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-eU-XoZ">
                         <rect key="frame" x="32" y="31" width="332" height="27"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="27" id="qrh-Qr-Gdt"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
+                        <color key="highlightedColor" red="0.68235294117647061" green="0.73725490196078436" blue="0.77254901960784317" alpha="1" colorSpace="calibratedRGB"/>
                     </label>
                 </subviews>
                 <constraints>
@@ -91,6 +91,7 @@
                         <exclude reference="kpQ-CA-3pA"/>
                         <exclude reference="SYp-XO-sMX"/>
                         <exclude reference="Y7R-C8-4YR"/>
+                        <exclude reference="utx-WC-qGl"/>
                         <exclude reference="RG9-pr-NXX"/>
                         <exclude reference="ZM4-MQ-jh7"/>
                         <exclude reference="gAp-kQ-ZdV"/>
@@ -100,6 +101,7 @@
                 </variation>
             </tableViewCellContentView>
             <accessibility key="accessibilityConfiguration" identifier="RepositoryCell "/>
+            <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="checkbox" destination="cd2-xU-m2w" id="tRe-iq-LSO"/>
